fixed events button overflow

--- a/src/ComponentsStyling/EventsWorkshops.css
+++ b/src/ComponentsStyling/EventsWorkshops.css
@@ -355,7 +355,7 @@
 @media screen and (max-width: 575px) {
   .events-workshops {
     padding: 30px 0; 
-    bottom: 145px; 
+    bottom: 170px; 
     width: 100%;
     overflow-x: hidden; 
     margin-bottom: -65px;
